--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
+    "@eslint/json": "^0.13.0",
     "@types/node": "^24.0.4",
+    "eslint": "^9.31.0",
+    "globals": "^16.3.0",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.37.0"
   }
 }
