--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "devDependencies": {
     "@eslint/js": "^9.31.0",
     "@eslint/json": "^0.13.1",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.0.4",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
