--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^24.0.4",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
+    "prisma": "^6.12.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0"
